sas-core/main/default/objects/Case_Status_Change__c/Case_Status_Change__c.object-meta.xml
<CustomObject>
    <label>Case Status Change</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Status Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>