sas-core/main/default/objects/Case_Status_Change__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Status Changes</relationshipLabel>
    <relationshipName>Case_Status_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>