sas-core/main/default/objects/Case_Status_Change__c/fields/Current_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Case_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Owner at Change</label>
    <length>100</length>
    <type>Text</type>
</CustomField>