sas-core/main/default/objects/Case_Status_Change__c/fields/Set_Time__c.field-meta.xml
<CustomField>
    <fullName>Set_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Start Time</label>
    <type>DateTime</type>
</CustomField>