sas-core/main/default/objects/Case_Status_Change__c/fields/Status_Name__c.field-meta.xml
<CustomField>
    <fullName>Status_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>